--- a/includes/weather.yaml
+++ b/includes/weather.yaml
@@ -18,7 +18,8 @@ sensor:
     id: ha_hour_0_feels_like
     entity_id: sensor.gazebo_hour_0_feels_like
     internal: true
-    
+
+
   - platform: homeassistant
     id: ha_hour_0_precipitation
     entity_id: sensor.gazebo_hour_0_precipitation
@@ -300,47 +301,54 @@ script:
           }
           int current_hour = time_now.hour;
           
+          // Helper to safely send value or skip if NaN
+          auto send_if_valid = [&](const char* component, float value) {
+            if (!isnan(value)) {
+              id(gazebo_nextion).send_command_printf("%s=%d", component, (int)value);
+            }
+          };
+
           // Hour 0
           id(gazebo_nextion).send_command_printf("one.dt0.val=%d", current_hour);
-          id(gazebo_nextion).send_command_printf("one.fl0.val=%d", (int)id(ha_hour_0_feels_like).state);
-          id(gazebo_nextion).send_command_printf("one.rain0.val=%d", (int)id(ha_hour_0_precipitation).state);
-          id(gazebo_nextion).send_command_printf("one.wxIcon0.pic=%d", wmo_to_icon((int)id(ha_hour_0_weather_code).state));
+          send_if_valid("one.fl0.val", id(ha_hour_0_feels_like).state);
+          send_if_valid("one.rain0.val", id(ha_hour_0_precipitation).state);
+          send_if_valid("one.wxIcon0.pic", wmo_to_icon((int)id(ha_hour_0_weather_code).state));
           
           // Hour 1
           id(gazebo_nextion).send_command_printf("one.dt1.val=%d", (current_hour + 1) % 24);
-          id(gazebo_nextion).send_command_printf("one.fl1.val=%d", (int)id(ha_hour_1_feels_like).state);
-          id(gazebo_nextion).send_command_printf("one.rain1.val=%d", (int)id(ha_hour_1_precipitation).state);
-          id(gazebo_nextion).send_command_printf("one.wxIcon1.pic=%d", wmo_to_icon((int)id(ha_hour_1_weather_code).state));
+          send_if_valid("one.fl1.val", id(ha_hour_1_feels_like).state);
+          send_if_valid("one.rain1.val", id(ha_hour_1_precipitation).state);
+          send_if_valid("one.wxIcon1.pic", wmo_to_icon((int)id(ha_hour_1_weather_code).state));
           
           // Hour 2
           id(gazebo_nextion).send_command_printf("one.dt2.val=%d", (current_hour + 2) % 24);
-          id(gazebo_nextion).send_command_printf("one.fl2.val=%d", (int)id(ha_hour_2_feels_like).state);
-          id(gazebo_nextion).send_command_printf("one.rain2.val=%d", (int)id(ha_hour_2_precipitation).state);
-          id(gazebo_nextion).send_command_printf("one.wxIcon2.pic=%d", wmo_to_icon((int)id(ha_hour_2_weather_code).state));
+          send_if_valid("one.fl2.val", id(ha_hour_2_feels_like).state);
+          send_if_valid("one.rain2.val", id(ha_hour_2_precipitation).state);
+          send_if_valid("one.wxIcon2.pic", wmo_to_icon((int)id(ha_hour_2_weather_code).state));
           
           // Hour 3
           id(gazebo_nextion).send_command_printf("one.dt3.val=%d", (current_hour + 3) % 24);
-          id(gazebo_nextion).send_command_printf("one.fl3.val=%d", (int)id(ha_hour_3_feels_like).state);
-          id(gazebo_nextion).send_command_printf("one.rain3.val=%d", (int)id(ha_hour_3_precipitation).state);
-          id(gazebo_nextion).send_command_printf("one.wxIcon3.pic=%d", wmo_to_icon((int)id(ha_hour_3_weather_code).state));
+          send_if_valid("one.fl3.val", id(ha_hour_3_feels_like).state);
+          send_if_valid("one.rain3.val", id(ha_hour_3_precipitation).state);
+          send_if_valid("one.wxIcon3.pic", wmo_to_icon((int)id(ha_hour_3_weather_code).state));
           
           // Hour 4
           id(gazebo_nextion).send_command_printf("one.dt4.val=%d", (current_hour + 4) % 24);
-          id(gazebo_nextion).send_command_printf("one.fl4.val=%d", (int)id(ha_hour_4_feels_like).state);
-          id(gazebo_nextion).send_command_printf("one.rain4.val=%d", (int)id(ha_hour_4_precipitation).state);
-          id(gazebo_nextion).send_command_printf("one.wxIcon4.pic=%d", wmo_to_icon((int)id(ha_hour_4_weather_code).state));
+          send_if_valid("one.fl4.val", id(ha_hour_4_feels_like).state);
+          send_if_valid("one.rain4.val", id(ha_hour_4_precipitation).state);
+          send_if_valid("one.wxIcon4.pic", wmo_to_icon((int)id(ha_hour_4_weather_code).state));
           
           // Hour 5
           id(gazebo_nextion).send_command_printf("one.dt5.val=%d", (current_hour + 5) % 24);
-          id(gazebo_nextion).send_command_printf("one.fl5.val=%d", (int)id(ha_hour_5_feels_like).state);
-          id(gazebo_nextion).send_command_printf("one.rain5.val=%d", (int)id(ha_hour_5_precipitation).state);
-          id(gazebo_nextion).send_command_printf("one.wxIcon5.pic=%d", wmo_to_icon((int)id(ha_hour_5_weather_code).state));
+          send_if_valid("one.fl5.val", id(ha_hour_5_feels_like).state);
+          send_if_valid("one.rain5.val", id(ha_hour_5_precipitation).state);
+          send_if_valid("one.wxIcon5.pic", wmo_to_icon((int)id(ha_hour_5_weather_code).state));
           
           // Hour 6
           id(gazebo_nextion).send_command_printf("one.dt6.val=%d", (current_hour + 6) % 24);
-          id(gazebo_nextion).send_command_printf("one.fl6.val=%d", (int)id(ha_hour_6_feels_like).state);
-          id(gazebo_nextion).send_command_printf("one.rain6.val=%d", (int)id(ha_hour_6_precipitation).state);
-          id(gazebo_nextion).send_command_printf("one.wxIcon6.pic=%d", wmo_to_icon((int)id(ha_hour_6_weather_code).state));
+          send_if_valid("one.fl6.val", id(ha_hour_6_feels_like).state);
+          send_if_valid("one.rain6.val", id(ha_hour_6_precipitation).state);
+          send_if_valid("one.wxIcon6.pic", wmo_to_icon((int)id(ha_hour_6_weather_code).state));
           
           ESP_LOGI("WEATHER", "Updated hourly forecast on Page 1");
 
@@ -392,68 +400,74 @@ script:
           }
           int today = time_now.day_of_week - 1;  // 0=Sunday
           
+          // Helper to safely send value or skip if NaN
+          auto send_if_valid = [&](const char* component, float value) {
+            if (!isnan(value)) {
+              id(gazebo_nextion).send_command_printf("%s=%d", component, (int)value);
+            }
+          };
+
           // Day 0 (Today)
           int d0 = time_now.day_of_month;
-          int t0 = (int)id(ha_day_0_temp_max).state;
-          int p0 = (int)id(ha_day_0_precipitation).state;
+          float t0_f = id(ha_day_0_temp_max).state;
+          float p0_f = id(ha_day_0_precipitation).state;
           int i0 = wmo_to_icon((int)id(ha_day_0_weather_code).state);
-          ESP_LOGI("WEATHER_DBG", "Day0: dt=%d temp=%d precip=%d icon=%d", d0, t0, p0, i0);
+          ESP_LOGI("WEATHER_DBG", "Day0: dt=%d temp=%.1f precip=%.1f icon=%d", d0, t0_f, p0_f, i0);
           
           id(gazebo_nextion).send_command_printf("two.dt10.val=%d", d0);
-          id(gazebo_nextion).send_command_printf("two.temp0.val=%d", t0);
-          id(gazebo_nextion).send_command_printf("two.precip0.val=%d", p0);
-          id(gazebo_nextion).send_command_printf("two.wxIcon10.pic=%d", i0);
+          send_if_valid("two.temp0.val", id(ha_day_0_temp_max).state);
+          send_if_valid("two.precip0.val", id(ha_day_0_precipitation).state);
+          send_if_valid("two.wxIcon10.pic", wmo_to_icon((int)id(ha_day_0_weather_code).state));
           
           // Day 1
           time_t t1 = time_now.timestamp + 86400;
           struct tm *tm1 = localtime(&t1);
           int d1 = tm1->tm_mday;
-          int t1_val = (int)id(ha_day_1_temp_max).state;
           
           id(gazebo_nextion).send_command_printf("two.dt11.val=%d", d1);
-          id(gazebo_nextion).send_command_printf("two.temp1.val=%d", t1_val);
-          id(gazebo_nextion).send_command_printf("two.precip1.val=%d", (int)id(ha_day_1_precipitation).state);
-          id(gazebo_nextion).send_command_printf("two.wxIcon11.pic=%d", wmo_to_icon((int)id(ha_day_1_weather_code).state));
+          send_if_valid("two.temp1.val", id(ha_day_1_temp_max).state);
+          send_if_valid("two.precip1.val", id(ha_day_1_precipitation).state);
+          send_if_valid("two.wxIcon11.pic", wmo_to_icon((int)id(ha_day_1_weather_code).state));
           
           // Day 2
           time_t t2 = time_now.timestamp + 172800;
           struct tm *tm2 = localtime(&t2);
           id(gazebo_nextion).send_command_printf("two.dt12.val=%d", tm2->tm_mday);
-          id(gazebo_nextion).send_command_printf("two.temp2.val=%d", (int)id(ha_day_2_temp_max).state);
-          id(gazebo_nextion).send_command_printf("two.precip2.val=%d", (int)id(ha_day_2_precipitation).state);
-          id(gazebo_nextion).send_command_printf("two.wxIcon12.pic=%d", wmo_to_icon((int)id(ha_day_2_weather_code).state));
+          send_if_valid("two.temp2.val", id(ha_day_2_temp_max).state);
+          send_if_valid("two.precip2.val", id(ha_day_2_precipitation).state);
+          send_if_valid("two.wxIcon12.pic", wmo_to_icon((int)id(ha_day_2_weather_code).state));
           
           // Day 3
           time_t t3 = time_now.timestamp + 259200;
           struct tm *tm3 = localtime(&t3);
           id(gazebo_nextion).send_command_printf("two.dt13.val=%d", tm3->tm_mday);
-          id(gazebo_nextion).send_command_printf("two.temp3.val=%d", (int)id(ha_day_3_temp_max).state);
-          id(gazebo_nextion).send_command_printf("two.precip3.val=%d", (int)id(ha_day_3_precipitation).state);
-          id(gazebo_nextion).send_command_printf("two.wxIcon13.pic=%d", wmo_to_icon((int)id(ha_day_3_weather_code).state));
+          send_if_valid("two.temp3.val", id(ha_day_3_temp_max).state);
+          send_if_valid("two.precip3.val", id(ha_day_3_precipitation).state);
+          send_if_valid("two.wxIcon13.pic", wmo_to_icon((int)id(ha_day_3_weather_code).state));
           
           // Day 4
           time_t t4 = time_now.timestamp + 345600;
           struct tm *tm4 = localtime(&t4);
           id(gazebo_nextion).send_command_printf("two.dt14.val=%d", tm4->tm_mday);
-          id(gazebo_nextion).send_command_printf("two.temp4.val=%d", (int)id(ha_day_4_temp_max).state);
-          id(gazebo_nextion).send_command_printf("two.precip4.val=%d", (int)id(ha_day_4_precipitation).state);
-          id(gazebo_nextion).send_command_printf("two.wxIcon14.pic=%d", wmo_to_icon((int)id(ha_day_4_weather_code).state));
+          send_if_valid("two.temp4.val", id(ha_day_4_temp_max).state);
+          send_if_valid("two.precip4.val", id(ha_day_4_precipitation).state);
+          send_if_valid("two.wxIcon14.pic", wmo_to_icon((int)id(ha_day_4_weather_code).state));
           
           // Day 5
           time_t t5 = time_now.timestamp + 432000;
           struct tm *tm5 = localtime(&t5);
           id(gazebo_nextion).send_command_printf("two.dt15.val=%d", tm5->tm_mday);
-          id(gazebo_nextion).send_command_printf("two.temp5.val=%d", (int)id(ha_day_5_temp_max).state);
-          id(gazebo_nextion).send_command_printf("two.precip5.val=%d", (int)id(ha_day_5_precipitation).state);
-          id(gazebo_nextion).send_command_printf("two.wxIcon15.pic=%d", wmo_to_icon((int)id(ha_day_5_weather_code).state));
+          send_if_valid("two.temp5.val", id(ha_day_5_temp_max).state);
+          send_if_valid("two.precip5.val", id(ha_day_5_precipitation).state);
+          send_if_valid("two.wxIcon15.pic", wmo_to_icon((int)id(ha_day_5_weather_code).state));
           
           // Day 6
           time_t t6 = time_now.timestamp + 518400;
           struct tm *tm6 = localtime(&t6);
           id(gazebo_nextion).send_command_printf("two.dt16.val=%d", tm6->tm_mday);
-          id(gazebo_nextion).send_command_printf("two.temp6.val=%d", (int)id(ha_day_6_temp_max).state);
-          id(gazebo_nextion).send_command_printf("two.precip6.val=%d", (int)id(ha_day_6_precipitation).state);
-          id(gazebo_nextion).send_command_printf("two.wxIcon16.pic=%d", wmo_to_icon((int)id(ha_day_6_weather_code).state));
+          send_if_valid("two.temp6.val", id(ha_day_6_temp_max).state);
+          send_if_valid("two.precip6.val", id(ha_day_6_precipitation).state);
+          send_if_valid("two.wxIcon16.pic", wmo_to_icon((int)id(ha_day_6_weather_code).state));
           
           ESP_LOGI("WEATHER", "Updated daily forecast on Page 2");
 
